--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync build/ s3://your-restaurant-01 --acl public-read"
   },
   "eslintConfig": {
     "extends": "react-app"
